[gd_scene load_steps=10 format=2]

[ext_resource path="res://PixelArts/Camera_Uc.png" type="Texture" id=1]
[ext_resource path="res://PixelArts/Ana_Camera.png" type="Texture" id=2]
[ext_resource path="res://PixelArts/Light_Ucgen.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 6.5 )

[sub_resource type="Animation" id=5]
resource_name = "AlarmOffAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite 00/Light2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "AlarmOnAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite 00/Light2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "CameraAnim"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite 00:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -35.0, -13.0, -35.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite 00:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -35.0 ]
}

[node name="Camera" type="StaticBody2D"]
collision_layer = 32
collision_mask = 32
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite 01" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite 00" type="Sprite" parent="."]
rotation = -0.610865
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="Sprite 00"]
position = Vector2( -134, 3.8147e-06 )
rotation = 1.5708
scale = Vector2( 1, 5 )
texture = ExtResource( 3 )
texture_scale = 0.05
color = Color( 1, 0, 0, 1 )
energy = 0.75
shadow_enabled = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="RayCast2D 01" type="RayCast2D" parent="Sprite 00"]
position = Vector2( -6, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 25.5, 256 )
collide_with_areas = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="RayCast2D 00" type="RayCast2D" parent="Sprite 00"]
position = Vector2( -6, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( -25.5, 256 )
collide_with_areas = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "CameraAnim"
anims/AlarmOffAnim = SubResource( 5 )
anims/AlarmOnAnim = SubResource( 4 )
anims/CameraAnim = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AlarmTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AlarmTime" to="." method="_on_AlarmTime_timeout"]
